--- a/paragraph.html
+++ b/paragraph.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Discover hidden places in the world around you</h1>
+        <h1>My first Heading</h1>
         <p>My first Paragraph</p>
     </body>
 </html>
