Add boilerplate HTML and begin page content

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="resource/css/style.css">
+    </head>
     <body>
-        <h1>Discover hidden places in the world around you</h1>
-        <p>My first Paragraph</p>
+        <h1 class="header" >Discover hidden places in the world around you</h1>
+        <a href="paragraph.html" class="paragraph">Download excursion (Coming Soon)</a>
+
     </body>
+
 </html>
     
