--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     </head>
     <body>
         <h1 class="header" >Discover hidden places in the world around you</h1>
+
         <a href="paragraph.html" class="paragraph">Download excursion (Coming Soon)</a>
 
+        <p><video autoplay controls width="500" height="450">
+            <source src="resource/videos/excursion.mp4" type="video/mp4">
+          </video></p>
+
+        <h1 style="font-family: Verdana; font-weight: 300; font-size: 42px; color: white;">Your personal travel guide</h1>
+
+        <p style="color: gray; font-family: verdana; font-size: 21px;">Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+        <p><img src="resource/images/camp.jpg" alt="Camp Image"></p>
+
+        <p><img src="resource/images/phone.png" alt="phone Image"></p>
+
+        <h1 style="font-family: Verdana; font-weight: 300; font-size: 42px; color: white;">Coming Soon for iPhone and Android</h1>
+
+        <a href="paragraph.html" class="paragraph">Download excursion (Coming Soon)</a>
+
+        <p style="text-align: right; color: grey;">© Excursion</p>
     </body>
 
 </html>
